RC 4
====

- Applied Ayendes patch to introduce component service type forwarding to
  support multiple service interfaces for a component.
  Extended the Component Registration interface to support service forwarding.

- Removed sealed qualifier from CreationContext and made ISubDependencyResolver
  methods virtual so they can be overriden.

- Made IKernel.AddFacility fluent.

- Added StartMethod/StartMethod to ComponentRegistration.

- Add if/unless support for ComponentRegistration.

- Applied Daniel Jins patch to not proxy internal interfaces.

- Fixed IOC-126
  "PoolableLifestyleManager creates pool in constructor" 

- Fixed IOC-125
  "DefaultGenericHandler does not properly handle proxied generic components"

- Updated AllTypes strategy to support types based on generic type definitions.

- Updated AllTypes strategy to support multiple registrations from a single set of types.

- Collection handlers from parent container for GetAssignableHandlers.

- Added ability to change invocation target to DefaultProxyFactory.

- Fixed bug with ComponentRegistration.Instance in which the instance type was not assigned as the ComponentModel implementation.

- Replaced AllTypesOf<T> syntax with AllTypes.Of<T> so a non-generic version can be consistently provided.  

- Added generic AddFacility methods to kernel.

- Added generalized configuration support to ComponentRegistration.

- Added IWindsorInstaller interface to enhance Windsor component installation.

- Added AllTypesOf registration stratgey to simplify custom registration
  scenarios.

- Added IRegistration interface to allow alternate registration mechanisms.

- Fixed CORE-16 (Should be Facilities) 
 "The FactorySupportFacility does not create proxies if interceptors are present"

- Added support for list service overrides using the fluent registration interface.
  Added support for specifying configuration parameters using the fluent interface to allow any complex
  registration scenarios.
